  "5n is now "5 min" or "5 minutes". A modifier is now required!
- Fixed gnome-console to compile with RH9 (Gnome 2.0)
- Implemented "list nextvol job=xxx", which displays the
  next volume to be used by job xxx. The Volume name to
  be used is also added to the "status dir" output.
- Lots of fixes with variable expansion and counter variables
- Implemented a new Include/Exclude syntax.


Other Changes this Release:
- A warning message is sent when a job starts that will be
  blocked because the user did an "unmount".
- Block checksum errors if any are printed in the job report.
- Implemented a single routine to read_records. It also returns
  a different record packet for each session.  This means
  that multiple simultaneous jobs should work.
- Added SDConnectTimeout to FD.    
- Lots of doc enhancements
- Fixed a PurgeOldestVolume bug (VolStatus not returned)
- Don't crash if DB address record not specified.
- Return VolStatus on find_next_volume.
- Use alist for incexe name_list.
- Use bget_dirmsg() everywhere possible when talking to FD.
- Delete old semaphore job and workq job scheduling code.
- edit_run_codes in one place (/lib)  Add Job name
- Update query.sql to find current backups correctly.
- Correct ambiguous SQL statement for pruning.
- Set heartbeat interval to zero by default.
- Fix a possible race condition in stopping the 
  heartbeat thread.
- Eliminate gnome2-console directory. Everything is in gnome-console
- Enhanced "packet too big" message to indicate who sent it.
- Corrected console prompt problem in non-readline versions.
- Correct a number of variable expansion problems.
- Added a number of new regression tests.
- In an attempt to make configuration a bit less confusing, I've changed
  the name of a number of variables. The old ones still work, but will
  be phased out over time. FDAddress, FDPassword, SDAddress SDPassword,
  SDDeviceName, and DBPassword.
- A possible fix to the very intermittent SD crashes that Alex gets.
              
